// OnlineLib Database Schema
// Format: DBML (dbdiagram.io)
// Paste at: https://dbdiagram.io/d

// ============================================
// CONTENT DOMAIN
// ============================================

Table works {
  id uuid [pk]
  slug varchar [unique, not null]
  created_at timestamptz [not null]
}

Table editions {
  id uuid [pk]
  work_id uuid [not null, ref: > works.id]
  language varchar [not null, note: 'en, uk, etc']
  slug varchar [unique, not null]
  title varchar [not null]
  description text
  authors_json text [note: 'JSON array']
  status int [not null, note: '0=Draft, 1=Published, 2=Hidden']
  published_at timestamptz
  source_edition_id uuid [ref: > editions.id, note: 'for translations']
  cover_path varchar
  is_public_domain boolean [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (work_id, language) [unique]
  }
}

Table chapters {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  chapter_number int [not null]
  slug varchar
  title varchar [not null]
  html text [not null]
  plain_text text [not null]
  word_count int
  search_vector tsvector [note: 'GIN indexed for FTS']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (edition_id, chapter_number) [unique]
    search_vector [type: gin]
  }
}

Table book_files {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  original_file_name varchar [not null]
  storage_path varchar [not null]
  format int [not null, note: '0=Epub, 1=Pdf, 2=Fb2']
  sha256 varchar
  uploaded_at timestamptz [not null]
}

Table ingestion_jobs {
  id uuid [pk]
  edition_id uuid [not null, ref: > editions.id]
  book_file_id uuid [not null, ref: > book_files.id]
  target_language varchar [not null]
  work_id uuid [ref: > works.id]
  source_edition_id uuid [ref: > editions.id]
  status int [not null, note: '0=Queued, 1=Processing, 2=Done, 3=Failed']
  attempt_count int [not null]
  error text
  created_at timestamptz [not null]
  started_at timestamptz
  finished_at timestamptz
}

// ============================================
// USER DOMAIN
// ============================================

Table users {
  id uuid [pk]
  email varchar(255) [unique, not null]
  name varchar(255)
  google_subject varchar(255) [unique, not null, note: 'Google OAuth sub']
  created_at timestamptz [not null]
}

Table user_libraries {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  edition_id uuid [not null, ref: > editions.id]
  created_at timestamptz [not null]

  indexes {
    (user_id, edition_id) [unique]
  }
}

Table reading_progresses {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null, note: 'JSON locator']
  percent float
  updated_at timestamptz [not null]

  indexes {
    (user_id, edition_id) [unique]
  }
}

Table bookmarks {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null]
  title varchar
  created_at timestamptz [not null]
}

Table notes {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  edition_id uuid [not null, ref: > editions.id]
  chapter_id uuid [not null, ref: > chapters.id]
  locator text [not null]
  text text [not null]
  selected_text text
  is_deleted boolean [not null, default: false, note: 'soft delete']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// ============================================
// ADMIN DOMAIN
// ============================================

Table admin_users {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar [not null]
  role int [not null, note: '0=Admin, 1=Editor, 2=Moderator']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table admin_refresh_tokens {
  id uuid [pk]
  admin_user_id uuid [not null, ref: > admin_users.id]
  token varchar [unique, not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null]
}

Table admin_audit_logs {
  id uuid [pk]
  admin_user_id uuid [not null, ref: > admin_users.id]
  action_type varchar [not null]
  entity_type varchar [not null]
  entity_id uuid
  payload_json text
  created_at timestamptz [not null]

  indexes {
    action_type
    admin_user_id
    created_at
  }
}

// ============================================
// TABLE GROUPS (for visual organization)
// ============================================

TableGroup content {
  works
  editions
  chapters
  book_files
  ingestion_jobs
}

TableGroup user_data {
  users
  user_libraries
  reading_progresses
  bookmarks
  notes
}

TableGroup admin {
  admin_users
  admin_refresh_tokens
  admin_audit_logs
}
